alignment issues
Fixed layout jumping (height 280)

--- a/styles.css
+++ b/styles.css
@@ -22,7 +22,7 @@ span.blockspam {
   position: relative;
   overflow: hidden;
   width: 100%;
-  border-radius: 32px;
+  border-radius: 8px;
   padding-top: 56.25%; /* 16:9 Aspect Ratio (divide 9 by 16 = 0.5625)
   
   /*width: 80%;
@@ -44,7 +44,7 @@ span.blockspam {
 {
 	.yt-video-container 
 	{
-		border-radius: 16px;
+		border-radius: 8px;
 	}
 	
 	.project-description 
@@ -52,8 +52,15 @@ span.blockspam {
 	    float: center;
 		width: 100%;
 	}
+	
+	.project-description-container
+    {		
+	    float: center;
+		width: 100%;
+	}
 
 }
+
 
 .rounded
 {
@@ -209,12 +216,13 @@ transform: scale(1.25);
 
 .project-description-container
 {
-  min-height: 128px;
-  padding-top: 32px;	
+	min-height: 280px;
+    padding-top: 32px;	
 }
 
 .project-description
 {  
+  
   float: left;
-  max-width: 512px;
+  max-width: 640px;
 }
